RESOLVED FIXED35134
Crash when a plugin calls NPN_SetStatus(0)
https://bugs.webkit.org/show_bug.cgi?id=35134
Summary Crash when a plugin calls NPN_SetStatus(0)
Alexey Proskuryakov
Reported 2010-02-18 16:19:01 PST
Patch forthcoming.
Attachments
proposed fix (3.87 KB, patch)
2010-02-18 16:22 PST, Alexey Proskuryakov
mitz: review+
...and WebKitTools part (2.37 KB, patch)
2010-02-18 17:16 PST, Alexey Proskuryakov
mitz: review+
Alexey Proskuryakov
Comment 1 2010-02-18 16:22:19 PST
Created attachment 49048 [details] proposed fix
Alexey Proskuryakov
Comment 2 2010-02-18 16:22:50 PST
mitz
Comment 3 2010-02-18 16:24:46 PST
Comment on attachment 49048 [details] proposed fix > + if (!postData) > + return NPERR_INVALID_PARAM; > RetainPtr<CFStringRef> bufString(AdoptCF, CFStringCreateWithCString(kCFAllocatorDefault, postData, kCFStringEncodingWindowsLatin1)); > - if (!bufString) > + if (!postData) Why this change?
Alexey Proskuryakov
Comment 4 2010-02-18 16:26:12 PST
Oops, copy/paste mistake.
Alexey Proskuryakov
Comment 5 2010-02-18 16:38:47 PST
Alexey Proskuryakov
Comment 6 2010-02-18 17:16:42 PST
Created attachment 49049 [details] ...and WebKitTools part
mitz
Comment 7 2010-02-18 17:18:41 PST
Comment on attachment 49049 [details] ...and WebKitTools part > + } else if (name == pluginMethodIdentifiers[ID_SET_STATUS]) { > + return testSetStatus(plugin, args, argCount, result); > } No braces around one-line clause.
Alexey Proskuryakov
Comment 8 2010-02-18 17:22:08 PST
Committed WebKitTools part as <http://trac.webkit.org/changeset/54996>.
Note You need to log in before you can comment on or make changes to this bug.